--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,10 +14,10 @@
         <div class="left"> Rahul Portfolio </div>
         <div class="right">
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Projects</li>
-                <li>Contact</li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Projects</a></li>
+                <li><a href="/">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -26,7 +26,7 @@
         <section class="fistSection">
             <div class="leftSection">
                 Hi my name <span class="p">Rahul</span>
-                <div>a passionate  <span id="element1"></span>. I specialize in HTML, CSS, and JavaScript, and I love working with modern frameworks like  <div><span id="element2"></span> .</div></div>
+                <div>a passionate<span id="element1"></span>. I specialize in HTML, CSS, and JavaScript, and I love working with modern frameworks like<div><span id="element2"></span>.</div></div>
             </div>
             
             <div class="rightSection">
