--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,6 +32,11 @@
                 <img src="./img/BI.png" alt="Developer image">
             </div>
         </section>
+        <hr>
+        <section class="secondSection">
+            
+        </section>
+
     </main>
 <script src="./js/Portfolio.js"></script>
 </body>
