--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,36 +9,86 @@
     <link rel="stylesheet" href="./css/Portfolio.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
+
 <body>
     <header>
-    <nav>
-        <div class="left"> Rahul Portfolio </div>
-        <div class="right">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/">About</a></li>
-                <li><a href="/">Projects</a></li>
-                <li><a href="/">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+        <nav>
+            <div class="left"> Rahul Portfolio </div>
+            <div class="right">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#project">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <section class="fistSection">
             <div class="leftSection">
-                Hi my name <span class="p">Rahul</span>
-                <div>a passionate<span id="element1"></span>. I specialize in HTML, CSS, and JavaScript, and I love working with modern frameworks like<div><span id="element2"></span>.</div></div>
+                Hi my name <span class="name">Rahul</span>
+                <div>a passionate<span id="element1"></span>. I specialize in HTML, CSS, and JavaScript, and I love
+                    working with modern frameworks like<div><span id="element2"></span>.</div>
+                </div>
             </div>
             <div class="rightSection">
                 <img src="./img/BI.png" alt="Developer image">
             </div>
         </section>
         <hr>
-        <section class="secondSection">
-            
+        <section class="secondSection" id="about">
+            <div class="about">
+                <h2>ABOUT</h2>
+                <hr>
+                <div class="intro">
+                    <p>My name is <span id="element3"></span>. I have a strong passion for technology and a keen
+                        interest in
+                        webdevelopment. My hobbies include listening to music, playing chess, and watching movies, which
+                        provide a balance to my academic pursuits and keep me creatively stimulated.In terms of my
+                        strengths, I am punctual, self - motivated, and a quick learner.These qualities have consistently
+                        helped me excel in my studies and personal projects.Additionally, I have a talkative nature,
+                        which has significantly improved my communication skills and expanded my knowledge through engaging
+                        conversations and discussions.I possess strong technical skills in <strong>HTML, CSS, JavaScript, 
+                        ReactJS, and Java</strong>.My ultimate career goal is to become a proficient web developer.I
+                        ameager to secure a position in a reputable company where I can apply my skills, contribute to exciting
+                        projects, and continuously learn from industry professionals.I believe that working in a dynamic
+                        and challenging environment will help me achieve my professional aspirations and make a meaningful impact in the
+                        field of web development.
+                    </p>
+                </div>
+            </div>
+            <div class="skills">
+                <h2>MY SKILLS</h2>
+                <hr>
+                <h2>HTML</h2>
+                <div class="white">
+                    <div class="fist"></div>
+                </div>
+                <h2>CSS</h2>
+                <div class="white">
+                    <div class="second"></div>
+                </div>
+                <h2>JavaScript</h2>
+                <div class="white">
+                    <div class="third"></div>
+                </div>
+                <h2>ReactJS</h2>
+                <div class="white">
+                    <div class="fourth"></div>
+                </div>
+            </div>
         </section>
-
+        <hr>
+        <section class="thirdSection" id="project">
+            <div class="projects">
+                <h2>PROJECTS</h2>
+                <hr>
+                
+            </div>
+        </section>
     </main>
-<script src="./js/Portfolio.js"></script>
+    <script src="./js/Portfolio.js"></script>
 </body>
+
 </html>
