--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/Portfolio.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
+
 <body>
     <header>
         <nav>
@@ -29,6 +31,9 @@
                 <div>a passionate<span id="element1"></span>. I specialize in HTML, CSS, and JavaScript, and I love
                     working with modern frameworks like<div><span id="element2"></span>.</div>
                 </div>
+                <a href="./Resume .pdf" download="pdf">
+                    <button type="button">Download</button>
+                </a>
             </div>
             <div class="rightSection">
                 <img src="./img/BI.png" alt="Developer image">
@@ -44,14 +49,19 @@
                         interest in
                         webdevelopment. My hobbies include listening to music, playing chess, and watching movies, which
                         provide a balance to my academic pursuits and keep me creatively stimulated.In terms of my
-                        strengths, I am punctual, self - motivated, and a quick learner.These qualities have consistently
+                        strengths, I am punctual, self - motivated, and a quick learner.These qualities have
+                        consistently
                         helped me excel in my studies and personal projects.Additionally, I have a talkative nature,
-                        which has significantly improved my communication skills and expanded my knowledge through engaging
-                        conversations and discussions.I possess strong technical skills in <strong>HTML, CSS, JavaScript, 
-                        ReactJS, and Java</strong>.My ultimate career goal is to become a proficient web developer.I
-                        ameager to secure a position in a reputable company where I can apply my skills, contribute to exciting
+                        which has significantly improved my communication skills and expanded my knowledge through
+                        engaging
+                        conversations and discussions.I possess strong technical skills in <strong>HTML, CSS,
+                            JavaScript,
+                            ReactJS, and Java</strong>.My ultimate career goal is to become a proficient web developer.I
+                        ameager to secure a position in a reputable company where I can apply my skills, contribute to
+                        exciting
                         projects, and continuously learn from industry professionals.I believe that working in a dynamic
-                        and challenging environment will help me achieve my professional aspirations and make a meaningful impact in the
+                        and challenging environment will help me achieve my professional aspirations and make a
+                        meaningful impact in the
                         field of web development.
                     </p>
                 </div>
@@ -82,9 +92,50 @@
             <div class="projects">
                 <h2>PROJECTS</h2>
                 <hr>
+                <div class="card">
+                    <h3>Daily-News</h3>
+                    <hr>
+                    <div class="container">
+                        <p>This project allows users to view the top headlines and latest news across various categories
+                            such as Sports, Business, and World. The latest news is fetched from the NEWS API and
+                            displayed dynamically on the website.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3>Text-conveter</h3>
+                    <hr>
+                    <div class="container">
+                        <p>This project allows users to manipulate the text written in the text area using various
+                            features and functionalities. The technologies used in this project include React.js, and
+                            CSS. Text
+                            Manipulation: Users can perform various text transformations such as changing the case.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3>Login-page</h3>
+                    <hr>
+                    <div class="container">
+                        <p>This project is a simple login page designed to authenticate users. It utilizes HTML5 and CSS
+                            for the structure and styling of the page, JavaScript for client-side validation.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3>Musical-kit</h3>
+                    <hr>
+                    <div class="container">
+                        <p>This project allows users to play various musical instrument sounds, such as drums and piano,
+                            through an interactive web interface. It is designed to be user-friendly and engaging,
+                            making it easy for anyone to play and enjoy music directly from their browser.</p>
+                    </div>
+                </div>
             </div>
+        </section>
+        <hr>
+        <section class="fourthSection" id="contact">
+
         </section>
     </main>
     <script src="./js/Portfolio.js"></script>
 </body>
+
 </html>
