--- a/index.html
+++ b/index.html
@@ -27,13 +27,18 @@
     <main>
         <section class="fistSection">
             <div class="leftSection">
-                Hi my name <span class="name">Rahul</span>
-                <div>a passionate<span id="element1"></span>. I specialize in HTML, CSS, and JavaScript, and I love
-                    working with modern frameworks like<div><span id="element2"></span>.</div>
+                <p>
+                    Hi my name is <span class="name">Rahul</span>.
+                    <br>A passionate<span id="element1"></span>.
+                    <br>I specialize in HTML, CSS, and JavaScript, and I love
+                    working with modern frameworks like<br><span id="element2"></span>.
+                </p>
+                <div class="button">
+                    <a href="./Resume .pdf" download="Resume">
+                    <button class="btn" type="button">Download CV</button>
+                    </a>
                 </div>
-                <a href="./Resume .pdf" download="pdf">
-                    <button type="button">Download</button>
-                </a>
+
             </div>
             <div class="rightSection">
                 <img src="./img/BI.png" alt="Developer image">
@@ -45,7 +50,7 @@
                 <h2>ABOUT</h2>
                 <hr>
                 <div class="intro">
-                    <p>My name is <span id="element3"></span>. I have a strong passion for technology and a keen
+                    <p>My name is <span id="element3"></span>.I have a strong passion for technology and a keen
                         interest in
                         webdevelopment. My hobbies include listening to music, playing chess, and watching movies, which
                         provide a balance to my academic pursuits and keep me creatively stimulated.In terms of my
@@ -132,6 +137,7 @@
         </section>
         <hr>
         <section class="fourthSection" id="contact">
+
         </section>
     </main>
     <script src="./js/Portfolio.js"></script>
