--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     Hi my name is <span class="name">Rahul</span>.
                     <br>A passionate<span id="element1"></span>.
                     <br>I specialize in HTML, CSS, and JavaScript, and I love
-                    working with modern frameworks like<br><span id="element2"></span>.
+                    working with modern frameworks like,<br><span id="element2"></span>.
                 </p>
                 <div class="button">
                     <a href="./Resume .pdf" download="Resume">
