--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <hr>
                 <h2>HTML</h2>
                 <div class="white">
-                    <div class="fist"></div>
+                    <div class="first"></div>
                 </div>
                 <h2>CSS</h2>
                 <div class="white">
