--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title> My Portfolio</title>
     <link rel="shortcut icon" href="./img/resume.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/Portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
 
@@ -169,7 +170,7 @@
                         <label for="textarea">Your Message</label>
                         <textarea name="Message" id="textarea" placeholder="Write your message" required></textarea>
                     </div>
-                    
+
                     <div class="btn">
                         <button type="submit">Submit</button>
                     </div>
@@ -177,6 +178,19 @@
                 </form>
             </div>
         </section>
+        
+        <footer>
+            <div class="footer">
+                <div class="icon">
+                    <a href="https://github.com/Rahul-web-2"><i class="fa fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/rahul-lakhchaura-b20656170/"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://x.com/TYSON2002rahul"><i class="fa fa-twitter"></i></a>
+            </div>
+
+            <div class="Copyright">
+               <span>Copyright © 2024 - All rights reserved || Designed By: Rahul Lakhchaura</span> 
+                </div>
+        </footer>
     </main>
     <script src="./js/Portfolio.js"></script>
 </body>
