--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title> My Portfolio</title>
     <link rel="shortcut icon" href="./img/resume.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/Portfolio.css">
+    <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
