--- a/index.html
+++ b/index.html
@@ -155,21 +155,21 @@
                     onsubmit="validateForm()">
                     <div class="form-control">
                         <label for="username">Username</label>
-                        <input type="name" placeholder="florinpop17" id="username" name="Username"
+                        <input type="name" placeholder="florinpop17" id="username" name="Username" required
                             pattern="[A-Za-z]+" />
                         <span>Error message</span>
                     </div>
 
                     <div class="form-control">
                         <label for="email">Email</label>
-                        <input type="email" placeholder="example01@gmail.com" id="email" name="Email"
+                        <input type="email" placeholder="example01@gmail.com" id="email" name="Email" required
                             pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" />
                         <span>Error message</span>
                     </div>
 
                     <div class="form-control">
                         <label for="Number">Phone No.</label>
-                        <input type="tel" placeholder="123456789" id="tel" name="Phone No." pattern="[0-9]{10}" />
+                        <input type="tel" placeholder="123456789" id="tel" name="Phone No." pattern="[0-9]{10}" required />
                         <span>Error message</span>
                     </div>
 
