--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
                 <h2>PROJECTS</h2>
                 <hr>
                 <div class="container">
+
+                    <div class="card">
+                        <h3>Portfolio </h3>
+                        <hr>
+                        <p>Welcome to my personal portfolio! This repository showcases my projects, skills, and
+                            experience in various fields. Feel free to explore and learn more about my work.</p>
+                        <a href="https://portfolio-gamma-ruby-78.vercel.app/" style="color: white; padding: 38%;"
+                            target="_blank">Click here</a>
+                    </div>
+
                     <div class="card">
                         <h3>Daily-News</h3>
                         <hr>
@@ -119,6 +129,8 @@
                             features and functionalities. The technologies used in this project include React.js, and
                             CSS. Text
                             Manipulation: Users can perform various text transformations such as changing the case.</p>
+                        <a href="https://text-conveter.vercel.app/" style="color: white; padding: 38%;"
+                            target="_blank">Click here</a>
                     </div>
 
 
@@ -129,7 +141,9 @@
                             for the structure and styling of the page, JavaScript for client-side validation.</p>
                     </div>
 
+                </div>
 
+                <div class="container">
                     <div class="card">
                         <h3>Musical-kit</h3>
                         <hr>
@@ -137,7 +151,6 @@
                             through an interactive web interface. It is designed to be user-friendly and engaging,
                             making it easy for anyone to play and enjoy music directly from their browser.</p>
                     </div>
-
                 </div>
             </div>
 
@@ -169,7 +182,8 @@
 
                     <div class="form-control">
                         <label for="Number">Phone No.</label>
-                        <input type="tel" placeholder="123456789" id="tel" name="Phone No." pattern="[0-9]{10}" required />
+                        <input type="tel" placeholder="123456789" id="tel" name="Phone No." pattern="[0-9]{10}"
+                            required />
                         <span>Error message</span>
                     </div>
 
